[tool.poetry]
name = "diaconia"
version = "0.1.0"
description = "Programa responsavel por organizar tarefas diaconia"
authors = ["Eric Carlos <codicarlys@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
